# agent-conveyor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  knip.json  package-lock.json  package.json  pyproject.toml  tsconfig.cli.json
.github/workflows/: docs.yml  landing-page-pr.yml  live-smoke.yml  pages.yml  publish.yml  test.yml
dashboard/: index.html  tsconfig.json  vite.config.ts
dashboard/client/: main.tsx  styles.css
dashboard/scripts/: run-tests.mjs
dashboard/server/: index.ts  terminal.ts  workerctl.test.ts  workerctl.ts
docs/: adversarial-proof-cross-repo-issue-drafts.md  agent-evidence-playbook.md  landing-media-capture-plan.md  landing-page-protection-smoke.md  landing-page.html  live-qa-log.md  local-telemetry-workflow.md  manager-recipes.md  manual-assignment-phase-1-plan.md  manual-assignment-phase-2-plan.md  manual-assignment-phase-3-plan.md  manual-assignment-phase-4-plan.md  manual-assignment-phase-5-plan.md  manual-assignment-phase-5-retirement-list.md  manual-assignment-phase-6-plan.md  manual-assignment-phase-7-plan.md  manual-assignment-phase-8-plan.md  manual-assignment-phase-9-emergent-acceptance-criteria-plan.md  manual-qa-checklist.md  package-release.md  prototype-plan.md  worker-first-promotion-plan.md
docs/archive/: python-package-history.md
docs/live-qa-artifacts/: dashboard-bootstrap.spec.js  dashboard-dogfood.spec.js
docs/qa/: README.md  adversarial-proof.md  adversarial-triggers.md  codex-review-recursion-guard.md  complex-refactor.md  dashboard-evidence-review.md  (+14 more)
scripts/: capture-static-html-screenshot.mjs  check-landing-page.mjs  check-max-lines.mjs  check-resource-warnings  install-local  live-smoke  live-smoke-repeat  package-smoke  prepublish-guard.mjs  rc-check  release-check  run-unittests-isolated  serve-landing-page.mjs  ts-migration-audit.mjs  workerctl
src/: index.ts
tests/: test_workerctl.py
workerctl/: __init__.py  __main__.py  audit.py  classify.py  cli.py  codex_session.py  commands.py  constants.py  core.py  criteria_plan.py  db.py  export.py  identity.py  importer.py  ingest.py  lifecycle.py  loop_templates.py  loop_triggers.py  manager_recipes.py  ralph_loop_presets.py  replay.py  shadow_state.py  skill_installer.py  state.py  supervise.py  supervise_cycle.py  tmux.py  visual_diff.py
(+1097 files in other folders)
