[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-conveyor"
version = "0.1.0"
description = "Local agent manager/worker conveyor control plane for Codex sessions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "NeonWatty" }]
keywords = ["agent", "codex", "conveyor", "manager-worker", "workflow-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]

[project.urls]
"Homepage" = "https://github.com/neonwatty/codex-terminal-manager"
"Source" = "https://github.com/neonwatty/codex-terminal-manager"
"Issues" = "https://github.com/neonwatty/codex-terminal-manager/issues"

[project.scripts]
conveyor = "workerctl.cli:main"
workerctl = "workerctl.cli:main"

[tool.setuptools]
packages = ["workerctl", "workerctl.assets", "workerctl.assets.skills"]

[tool.setuptools.package-data]
# Bundles workerctl/assets/skills/... into the agent-conveyor wheel.
workerctl = ["assets/skills/**/*"]
